--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,13 +1,19 @@
+* {
+    background-color: black;
+}
+
+header {
+    text-align: center;
+}
+
 h1 {
     font-family: verdana;
     font-weight: normal;
     font-size: 50px;
     color: white;
-    text-align: center;
 }
 
 a {
     color: aquamarine;
     font-size: 16px;
-    text-align: center;
 }
