--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,3 +21,20 @@ a {
 #app_demo {
     text-align: center;
 }
+
+#app_info {
+    text-align: center;
+    font-family: verdana;
+}
+
+#app_info>h2 {
+    color: white;
+    font-weight: 300;
+    font-size: 42px;
+}
+
+#app_info>p {
+    font-size: 21px;
+    color: gray;
+}
+
