--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,7 +27,7 @@ a {
     font-family: verdana;
 }
 
-#app_info>h2 {
+h2 {
     color: white;
     font-weight: 300;
     font-size: 42px;
@@ -38,3 +38,6 @@ a {
     color: gray;
 }
 
+footer {
+    text-align: center;
+}
